<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_habitats"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/my_habitat" />

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/my_home" />


        <item
            android:id="@+id/nav_requests"
            android:icon="@drawable/ic_mail"
            android:title="@string/my_requests" />

        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="Calendrier" />

        <item
            android:id="@+id/nav_my_bookings"
            android:icon="@drawable/ic_booking"
            android:title="Mes réservations" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_Log_out"
            android:icon="@drawable/ic_settings"
            android:title="@string/log_out" />


    </group>

</menu>