<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_appliance"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_appareil"/>

    <Spinner
        android:id="@+id/spinner_appliance_type"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/et_appliance_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nom_personnalise"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/et_appliance_wattage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/puissance"
        android:inputType="number" />

    <EditText
        android:id="@+id/et_appliance_ref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reference_otionnel" />

</LinearLayout>