<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">
    <Button
        android:id="@+id/btnTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/theme"
        android:layout_marginBottom="40dp"/>
    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_pourcentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginVertical="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMoins"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/less"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:text="@string/plus"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>